Style scrollbar, fixed broken links, and change comic cover

--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ width: 33.2%;
   border-bottom: 1px solid;
 }
 .comic-heading a {
-    1px 1px 0 #fff;
+    border:1px 1px 0 #fff;
   color: #fff;
   text-decoration: none;
 }
@@ -365,7 +365,6 @@ width: 33.2%;
 .archive-comic {
   background: rgba(240, 240, 240, 0.8);
   position: relative;
-  margin: 20px 0;
 }
 .archive-comic-heading {
   padding: 0 20px;
@@ -543,7 +542,6 @@ a.comic-nav {
     background: #222;
     top: 0;
     opacity:0;
-    transition:.5s;
     display: flex;
     width: 120px;
     flex-wrap: wrap;
@@ -553,6 +551,26 @@ a.comic-nav {
 }
 .page-list:hover{
   overflow:auto;
+  padding-left: 10px;
+}
+@-moz-document url-prefix() {
+  .page-list:hover{
+    padding-left: 0;
+  }  
+}
+/* width */
+.page-list::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.page-list::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+.page-list::-webkit-scrollbar-thumb {
+  background: #777;
 }
 .page-list li {
     border-radius: 50%;
@@ -566,17 +584,19 @@ a.comic-nav {
   color:#fcfcfc
 }
 .page-list li:hover{
-  background:#fcfcfc;
-  color:#222;
+  background:#000;
+  border:1px solid #fff;
 }
 .page-list li a {
-display: block;
+  display: block;
     color: inherit;
     padding: 10px;
     text-align: center;
     position: relative;
     z-index: 1;
     margin: auto;
+    font-weight:900;
+
   text-decoration:none;
 }
 .page-list span {
@@ -614,7 +634,8 @@ display: block;
   padding: 0 10px 0 0;
 }
 .header .comic-nav.previous {
-  background: #333;
+  background: #fff;
+  color:#222;
   height:150px;
   width: 70px;
   min-width: 50px;
@@ -954,7 +975,16 @@ display: block;
   background: #222;
   color: #f2f2f2;
 }
+.end:target ~ .comic main.overflow-auto {
+  padding-top: 50px;
+}
+.end:target .comic-aside {
+  background: #ffffffc4;
+}
 /*States*/
+:has(#end:target) .page-list{
+  opacity: 0;
+}
 #snap:checked ~ .comic .comic-cover-page a.comic-nav span {
     display: none;
 }
